I made some changes

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                         <!-- DYNAMIC TEXT -->
 
                         <ul class="dynamic-txt">
-                            <li class="dynamic-li"><span class="dynamic-span">fullstack <span
+                            <li class="dynamic-li dli"><span class="dynamic-span">fullstack <span
                                         class="dev">developer</span></span></li>
                         </ul>
                     </div>
 
                     <!-- JUST ME -->
 
-                    <div class="justme">
+                    <div class="justme para">
                         <p>Hi i'm Somtochukwu Nnaji, a passionate fullstack Developer based in Awka, Nigeria. <span
                                 class="tbdnone">Welcome to
                                 my
@@ -165,7 +165,7 @@
                 <!-- THE ANIMATED BORDER  -->
 
                 <a href="#down" class="theborder">
-                    <div class="animatedborder">
+                    <div class="animatedborder anb">
                         <span class="animatedspan"></span>
                     </div>
                 </a>
@@ -173,7 +173,7 @@
 
             <!-- MY IMAGE -->
             
-            <div class="image">
+             <div class="image"> 
                 <img src="./assets/images/me.png" alt="Error Loading Image" class="myimage">
             </div>
         </sectiion>
@@ -195,7 +195,7 @@
                 </svg>
             </div>
         </div>
-        
+
         <!--/ THIS IS THE WAVE HERE IT ENDS HERE-->
 </body>
 
