I made some changes

--- a/index.html
+++ b/index.html
@@ -165,38 +165,415 @@
                 <!-- THE ANIMATED BORDER  -->
 
                 <a href="#down" class="theborder">
-                    <div class="animatedborder anb">
-                        <span class="animatedspan"></span>
+                    <div class="animatedborder anb animeborder">
+                        <span class="animatedspan ans"></span>
                     </div>
                 </a>
             </div>
 
             <!-- MY IMAGE -->
-            
-             <div class="image"> 
+
+            <div class="image">
                 <img src="./assets/images/me.png" alt="Error Loading Image" class="myimage">
             </div>
         </sectiion>
-       
+
         <!--/ MY INTRODUCTION ENDS HERE-->
 
     </section>
 
     <!--/ THE WRAPPER ENDS HERE -->
 
-        <!-- THIS IS THE WAVE HERE IT BEGINS -->
-        <div class="thesvgparent">
-            <div class="custom-shape-divider-bottom-1651532702">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path
-                        d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
-                        class="shape-fill fillup"></path>
-                </svg>
+    <!-- THIS IS THE WAVE HERE IT BEGINS -->
+    <div class="thesvgparent">
+        <div class="custom-shape-divider-bottom-1651532702">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                    class="shape-fill fillup"></path>
+            </svg>
+        </div>
+    </div>
+
+    <!--/ THIS IS THE WAVE HERE IT ENDS HERE-->
+
+    <!-- THE SECOND WRAPPER BEGINS HERE -->
+    <section class="secondwrapper" id="down">
+
+        <!-- THE SECOND WRAPPER'S CHILD -->
+
+        <div class="secondwrapperchild">
+
+            <!-- MY IMAGE AND THE TEXTS ON IT -->
+
+            <div class="imagenchild">
+
+                <!-- MY IMAGE -->
+
+                <div class="imag">
+                    <img src="./assets/images/mee.png" alt="Error Loading Image" class="tire">
+                </div>
+
+                <!-- THE THREE BOXES THAT LAPPED ON MY IMAGE -->
+
+                <div class="lilx lil_1">
+                    <div class="plusup">
+                        <h3 class="plus">3 </h3><span class="fa-solid fa-plus"></span>
+                    </div>
+                    <p class="para">years of experience</p>
+                </div>
+
+                <!-- THE SECOND ONE -->
+
+                <div class="lilx lil_2">
+                    <div class="plusup">
+                        <h3 class="plus">10 </span></h3><span class="fa-solid fa-plus"></span>
+                    </div>
+                    <p class="para">happy clients</p>
+                </div>
+
+                <!-- THE LAST ONE -->
+
+                <div class="lilx lil_3">
+                    <div class="plusup">
+                        <h3 class="plus">210 </span></h3><span class="fa-solid fa-plus">
+                    </div>
+                    <p class="para">completed projects</p>
+                </div>
+            </div>
+
+            <!-- THE TEXT ABOUT ME -->
+
+            <div class="about">
+                <div>
+                    <h3 class="aboutme">About me</h3>
+                    <p class="diss"> Hi i'm Somtochukwu Nnaji, I have a strong passion for programming and working with
+                        new clients,
+                        I specialize in both front-end and back-end programming and my passion is all about building
+                        suitable, elegant and professional. </p>
+                </div>
+
+                <!-- THE READ MORE BUTTON -->
+
+                <div class="button">
+                    <button class="btn">
+                        <a href="./about.html" class="readmore">read more</a>
+                    </button>
+                </div>
             </div>
         </div>
 
-        <!--/ THIS IS THE WAVE HERE IT ENDS HERE-->
+        <!-- THE ANIMATED BORDER  -->
+
+        <a href="#myservices" class="theborder">
+            <div class="animatedborder">
+                <span class="animatedspan"></span>
+            </div>
+        </a>
+
+        <!-- MY SERVICES -->
+
+        <div class="myservices" id="myservices">
+
+            <!-- THE HEADERS IN MY SERVICES -->
+
+            <div class="myservicesheaders">
+                <h3 class="static-txt">what i do</h3>
+                <h3 class="aboutme">services</h3>
+            </div>
+
+            <!-- THE THREE SERVICE BOX -->
+
+            <div class="three">
+
+                <!-- THE FIRST BOX -->
+                <div class="box box_1"><span class="fa-solid fa-tv icony"></span>
+
+                    <!-- THE FIRST BOX PARAGRAPH AND HEADER -->
+
+                    <div class="pnh">
+                        <p class="para">100 projects</p>
+                        <h4 class="head">frontend</h4>
+                    </div>
+
+                    <!-- THE PARAGRAPH HERE -->
+
+                    <p class="sp">
+                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
+                    </p>
+
+                    <!-- THE READ MORE BUTTON -->
+
+                    <div class="button">
+                        <button class="btn">
+                            <a href="./about.html" class="readmore">read more</a>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- THE SECOND BOX -->
+
+                <div class="box box_2"><span class="fa-solid fa-lightbulb icony g"></span>
+
+                    <!-- THE SECOND BOX PARAGRAPH AND HEADER -->
+
+                    <div class="pnh">
+                        <p class="para">30 projects</p>
+                        <h4 class="head">ui/ux design</h4>
+                    </div>
+
+                    <!-- THE PARAGRAPH HERE-- -->
+                    <p class="sp">
+                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
+                    </p>
+
+                    <!-- THE READ MORE BUTTON -->
+
+                    <div class="button">
+                        <button class="btn">
+                            <a href="./about.html" class="readmore">read more</a>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- THE THIRD BOX -->
+
+                <div class="box box_3"><span class="fa-solid fa-laptop-code icony g"></span>
+
+                    <!-- THE FIRST BOX PARAGRAPH AND HEADER -->
+
+                    <div class="pnh">
+                        <p class="pgra">80 projects</p>
+                        <h4 class="head">backend</h4>
+                    </div>
+                    <p class="sp">
+                        Creates project plan, Responsiveness, User Testing and User Friendly Interface.
+                    </p>
+
+                    <!-- THE READ MORE BUTTON -->
+
+                    <div class="button">
+                        <button class="btn">
+                            <a href="./about.html" class="readmore">read more</a>
+                        </button>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+        <!-- THE ANIMATED BORDER  -->
+
+        <a href="#projects" class="theborder animeborder">
+            <div class="animatedborder">
+                <span class="animatedspan"></span>
+            </div>
+        </a>
+    </section>
+
+    <!-- / THE SECOND WRAPPER ENDS HERE -->
+
+    <!-- THE THIRD WRAPPER STARTS HERE -->
+
+    <section class="thirdwrapper" id="projects">
+
+        <!-- PROJECTS TITLE -->
+
+        <h3 class="aboutme pro">Projects</h3>
+
+        <!-- THE PROJECTS -->
+        <div class="myprojects">
+
+            <!-- THE PROJECT CHILD | FIRST ONE -->
+
+            <div class="projectchild">
+                <!-- THE PROJECT CHILD CHILD -->
+                <div class="pc">
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+                        <div class="modalwrapper" id="mod">
+                            <a href="#d"><img src="./assets/images/wildlife.png" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+
+                        <div class="modal" id="d">
+                            <div class="modalcontent">
+                                <img src="./assets/images/wildlife.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+
+                        </div>
+                    </div>
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+                        <div class="modalwrapper" id="mod">
+                            <a href="#eedemo"><img src="./assets/images/wildi.png" alt="" width="150px" class="ab"></a>
+                        </div>
+
+                        <!-- THE MODAL CONTENT -->
+                        <div class="modal" id="eedemo">
+                            <div class="modalcontent">
+                                <img src="./assets/images/wildi.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- THE HEADER IN THE PROJECT CHILD -->
+
+                <div class="theheaders">
+                    <h4 class="inds">
+                        THE WILDLIFE
+                    </h4>
+                </div>
+            </div>
+
+            <!-- THE PROJECT CHILD | SECOND ONE -->
+
+            <div class="projectchild">
+                <!-- THE PROJECT CHILD CHILD -->
+                <div class="pc">
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+                        <div class="modalwrapper" id="moda">
+                            <a href="#de"><img src="./assets/images/IMG_1759.PNG" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+
+                        <div class="modal" id="de">
+                            <div class="modalcontent">
+                                <img src="./assets/images/IMG_1759.PNG" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#moda" class="modal__close"><span class="fas fa-close"></span></a>
+
+                        </div>
+                    </div>
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+                        <div class="modalwrapper" id="mod">
+                            <a href="#edemo"><img src="./assets/images/facebook.png" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+
+                        <div class="modal" id="edemo">
+                            <div class="modalcontent">
+                                <img src="./assets/images/facebook.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- THE HEADER IN THE PROJECT CHILD -->
+
+                <div class="theheaders">
+                    <h4 class="inds">
+                        THE WILDLIFE
+                    </h4>
+                </div>
+            </div>
+
+            <!-- THE PROJECT CHILD | THIRD ONE -->
+
+            <div class="projectchild">
+                <!-- THE PROJECT CHILD CHILD -->
+                <div class="pc">
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+
+                        <div class="modalwrapper" id="modal">
+                            <a href="#dem"><img src="./assets/images/alphahome.png" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+
+                        <div class="modal" id="dem">
+                            <div class="modalcontent">
+                                <img src="./assets/images/alphahome.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#modal" class="modal__close"><span class="fas fa-close"></span></a>
+
+                        </div>
+                    </div>
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+
+                        <div class="modalwrapper" id="mod">
+                            <a href="#demo"><img src="./assets/images/alphascroll.png" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+
+                        <div class="modal" id="demo">
+                            <div class="modalcontent">
+                                <img src="./assets/images/alphascroll.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- THE HEADER IN THE PROJECT CHILD -->
+                <div class="theheaders">
+                    <h4 class="inds">
+                        THE WILDLIFE
+                    </h4>
+                </div>
+            </div>
+
+            <!-- THE PROJECT CHILD | FOURTH ONE -->
+
+            <div class="projectchild">
+
+                <!-- THE PROJECT CHILD CHILD -->
+                <div class="pc">
+
+                    <div class="">
+                        <!-- THE MODAL WRAPPER -->
+                        <div class="modalwrapper" id="mod">
+                            <a href="#e"><img src="./assets/images/wildlife.png" alt="" width="150px" class="ab"></a>
+                        </div>
+
+                        <!-- THE MODAL CONTENT -->
+                        <div class="modal" id="e">
+                            <div class="modalcontent">
+                                <img src="./assets/images/wildlife.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+
+                        </div>
+                    </div>
+                    <!-- THE MODAL WRAPPER -->
+                    <div class="">
+                        <div class="modalwrapper" id="mod">
+                            <a href="#eedemo"><img src="./assets/images/wildi.png" alt="" width="150px" class="ab"></a>
+                        </div>
+                        <!-- THE MODAL CONTENT -->
+                        <div class="modal" id="eedemo">
+                            <div class="modalcontent">
+                                <img src="./assets/images/wildi.png" alt="" srcset="" width="300px" class="ab">
+                            </div>
+                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- THE HEADER IN THE PROJECT CHILD -->
+
+                <div class="theheaders">
+                    <h4 class="inds">
+                        THE WILDLIFE
+                    </h4>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- /THE THIRD WRAPPER ENDS HERE -->
 </body>
 
 </html>
