I made some changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOMTOCHUKWU | PORTFOLIO</title>
-    <link rel="icon" href="./assets/images/unnamed.png">
+    <link rel="icon" href="./assets/images/letter-s-.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.css">
 </head>
@@ -24,7 +24,7 @@
 
             <div>
                 <a href="./index.html" class="site_title">
-                    <img src="./assets/images/unnamed.png" alt="Error loading image" width="30px" class="simage">
+                    <img src="./assets/images/letter-s-.png" alt="Error loading image" width="30px" class="simage">
                     <h1 class="page_title">SOmtochukwu</h1>
                 </a>
             </div>
@@ -364,6 +364,7 @@
             </div>
 
         </div>
+
         <!-- THE ANIMATED BORDER  -->
 
         <a href="#projects" class="theborder animeborder">
@@ -374,206 +375,241 @@
     </section>
 
     <!-- / THE SECOND WRAPPER ENDS HERE -->
-
+             <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+             <div class="thesvgparent">
+                <div class="custom-shape-divider-bottom-1651923262 customated">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                        preserveAspectRatio="none">
+                        <path
+                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                            class="shape-fill"></path>
+                    </svg>
+                </div>
+            </div>
+            <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
     <!-- THE THIRD WRAPPER STARTS HERE -->
 
-    <section class="thirdwrapper" id="projects">
+    <!-- THE LINE OF PROJECTS BEGIN HERE -->
+    <section class="projectas thirdwrapper" id="projects">
 
-        <!-- PROJECTS TITLE -->
+        <!-- MY SERVICE HEADERS -->
 
-        <h3 class="aboutme pro">Projects</h3>
+        <div class="myservicesheaders">
+            <h3 class="static-txt">projects i was featured in</h3>
+            <h3 class="aboutme pro">Projects</h3>
+        </div>
 
         <!-- THE PROJECTS -->
-        <div class="myprojects">
 
-            <!-- THE PROJECT CHILD | FIRST ONE -->
+        <div class="projects">
 
-            <div class="projectchild">
-                <!-- THE PROJECT CHILD CHILD -->
-                <div class="pc">
+            <!-- THE IMAGE SLIDE -->
+            <div class="imageslide">
 
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-                        <div class="modalwrapper" id="mod">
-                            <a href="#d"><img src="./assets/images/wildlife.png" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
+                <!-- THE FIRST IMAGE SLIDE -->
 
-                        <div class="modal" id="d">
-                            <div class="modalcontent">
-                                <img src="./assets/images/wildlife.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-
-                        </div>
+                <div class="islide">
+                    <div class="isc">
+                        <a href="./assets/images/alphahome.png">
+                            <img src="./assets/images/alphahome.png" alt="Error Loading Image" width="150px" class="ab">
+                        </a>
+                        <a href="./assets/images/alphascroll.png">
+                            <img src="./assets/images/alphascroll.png" alt="Error Loading Image" width="150px"
+                                class="ab">
+                        </a>
                     </div>
 
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-                        <div class="modalwrapper" id="mod">
-                            <a href="#eedemo"><img src="./assets/images/wildi.png" alt="" width="150px" class="ab"></a>
-                        </div>
+                    <div class="diss">
 
-                        <!-- THE MODAL CONTENT -->
-                        <div class="modal" id="eedemo">
-                            <div class="modalcontent">
-                                <img src="./assets/images/wildi.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-                        </div>
+                        <h4 class="pt">alpha hospital</h4>
                     </div>
                 </div>
-                <!-- THE HEADER IN THE PROJECT CHILD -->
 
-                <div class="theheaders">
-                    <h4 class="inds">
-                        THE WILDLIFE
-                    </h4>
+                <!-- THE SECOND IMAGE SLIDE -->
+
+
+                <div class="islide">
+                    <div class="isc"> <a href="./assets/images/IMG_2152.PNG">
+                            <img src="./assets/images/IMG_2152.PNG" alt="Error Loading Image" width="150px" class="ab">
+                        </a>
+
+                        <a href="./assets/images/ annualplan.png">
+                            <img src="./assets/images/ annualplan.png" alt="Error Loading Image" width="150px"
+                                class="ab">
+                        </a>
+                    </div>
+
+                    <div class="diss">
+                        <h4 class="pt">facebook</h4>
+                    </div>
+                </div>
+
+                <!-- THE THIRD IMAGE SLIDE -->
+
+                <div class="islide">
+                    <div class="isc">
+                        <a href="./assets/images/wildlife.png">
+                            <img src="./assets/images/wildlife.png" alt="Error Loading Image" width="150px" class="ab">
+                        </a>
+
+                        <a href="./assets/images/wildi.png">
+                            <img src="./assets/images/wildi.png" alt="Error Loading Image" width="150px" class="ab">
+                        </a>
+                    </div>
+                    <div class="diss">
+                        <h4 class="pt">last chance</h4>
+                    </div>
                 </div>
             </div>
-
-            <!-- THE PROJECT CHILD | SECOND ONE -->
-
-            <div class="projectchild">
-                <!-- THE PROJECT CHILD CHILD -->
-                <div class="pc">
-
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-                        <div class="modalwrapper" id="moda">
-                            <a href="#de"><img src="./assets/images/IMG_1759.PNG" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
-
-                        <div class="modal" id="de">
-                            <div class="modalcontent">
-                                <img src="./assets/images/IMG_1759.PNG" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#moda" class="modal__close"><span class="fas fa-close"></span></a>
-
-                        </div>
-                    </div>
-
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-                        <div class="modalwrapper" id="mod">
-                            <a href="#edemo"><img src="./assets/images/facebook.png" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
-
-                        <div class="modal" id="edemo">
-                            <div class="modalcontent">
-                                <img src="./assets/images/facebook.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-                        </div>
-                    </div>
-                </div>
-                <!-- THE HEADER IN THE PROJECT CHILD -->
-
-                <div class="theheaders">
-                    <h4 class="inds">
-                        THE WILDLIFE
-                    </h4>
-                </div>
-            </div>
-
-            <!-- THE PROJECT CHILD | THIRD ONE -->
-
-            <div class="projectchild">
-                <!-- THE PROJECT CHILD CHILD -->
-                <div class="pc">
-
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-
-                        <div class="modalwrapper" id="modal">
-                            <a href="#dem"><img src="./assets/images/alphahome.png" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
-
-                        <div class="modal" id="dem">
-                            <div class="modalcontent">
-                                <img src="./assets/images/alphahome.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#modal" class="modal__close"><span class="fas fa-close"></span></a>
-
-                        </div>
-                    </div>
-
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-
-                        <div class="modalwrapper" id="mod">
-                            <a href="#demo"><img src="./assets/images/alphascroll.png" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
-
-                        <div class="modal" id="demo">
-                            <div class="modalcontent">
-                                <img src="./assets/images/alphascroll.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-                        </div>
-                    </div>
-                </div>
-                <!-- THE HEADER IN THE PROJECT CHILD -->
-                <div class="theheaders">
-                    <h4 class="inds">
-                        THE WILDLIFE
-                    </h4>
-                </div>
-            </div>
-
-            <!-- THE PROJECT CHILD | FOURTH ONE -->
-
-            <div class="projectchild">
-
-                <!-- THE PROJECT CHILD CHILD -->
-                <div class="pc">
-
-                    <div class="">
-                        <!-- THE MODAL WRAPPER -->
-                        <div class="modalwrapper" id="mod">
-                            <a href="#e"><img src="./assets/images/wildlife.png" alt="" width="150px" class="ab"></a>
-                        </div>
-
-                        <!-- THE MODAL CONTENT -->
-                        <div class="modal" id="e">
-                            <div class="modalcontent">
-                                <img src="./assets/images/wildlife.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-
-                        </div>
-                    </div>
-                    <!-- THE MODAL WRAPPER -->
-                    <div class="">
-                        <div class="modalwrapper" id="mod">
-                            <a href="#eedemo"><img src="./assets/images/wildi.png" alt="" width="150px" class="ab"></a>
-                        </div>
-                        <!-- THE MODAL CONTENT -->
-                        <div class="modal" id="eedemo">
-                            <div class="modalcontent">
-                                <img src="./assets/images/wildi.png" alt="" srcset="" width="300px" class="ab">
-                            </div>
-                            <a href="#mod" class="modal__close"><span class="fas fa-close"></span></a>
-                        </div>
-                    </div>
-                </div>
-                <!-- THE HEADER IN THE PROJECT CHILD -->
-
-                <div class="theheaders">
-                    <h4 class="inds">
-                        THE WILDLIFE
-                    </h4>
-                </div>
-            </div>
-
         </div>
+
+        <!-- THE ANIMATED BORDER  -->
+
+        <a href="#4wrap" class="theborder animeborder">
+            <div class="animatedborder">
+                <span class="animatedspan"></span>
+            </div>
+        </a>
     </section>
+    <!-- /THE LINES OF PROJECT ENDS HERE -->
 
     <!-- /THE THIRD WRAPPER ENDS HERE -->
+                <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <div class="thesvgparent">
+        <div class="custom-shape-divider-top-1655133939">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
+
+    <!--/ THIS IS THE SECOND WAVE HERE IT ENDS HERE-->
+
+    <!-- THE FOURTH WRAPPER -->
+    <section class="fourthwrapper" id="4wrap">
+        <div class="myservicesheaders">
+            <h3 class="static-txt">What my happy clients say about me</h3>
+            <h3 class="aboutme pro">testimonials</h3>
+        </div>
+        <div class="testimonials">
+
+            <div class="myclients">
+                <a href="https://www.itonexglobal.com" class="clients">
+                    <img src="./assets/images/itonex.jpg" alt="Error Loading Image" width="150px" height="150px"
+                        class="imgborderradius">
+                </a>
+                <div class="clientword">
+                    <div class="chandstars">
+                        <div class="clientheaders">
+                            <h4 class="name">Ugochukwu Nnaji</h4>
+                            <h4 class="cpo">
+                                <a href="https://www.itonexglobal.com" class="cp smaller" target="blank"> Itonex global ltd
+                                    (C.E.O)</a>
+                            </h4>
+                        </div>
+                        <div class="fivestars">
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                        </div>
+                    </div>
+                    <p class="clientpara">
+                        &quot; Collaboration with Somtochukwu has helped us to unlock tremendous potential in multiple
+                        areas of
+                        our
+                        operations. &quot;
+                    </p>
+                </div>
+            </div>
+
+            <div class="myclients">
+                <a href="www.osmaxin.com" class="clients">
+                    <img src="./assets/images/stanco.jpg" alt="Error Loading Image" width="150px" height="150px"
+                        class="imgborderradius">
+                </a>
+
+                <div class="clientword">
+                    <div class="chandstars">
+                        <div class="clientheaders">
+                            <h4 class="name">Stanley Okechukwu</h4>
+                            <h4 class="cpo">
+                                <a href="https://www.osmaxin.com" class="cp" target="blank"> Osmaxin Developers</a>
+                            </h4>
+                        </div>
+                        <div class="fivestars">
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-regular fa-star-half-stroke"></span>
+                        </div>
+                    </div>
+                    <p class="clientpara">
+                        &quot; I have worked with Somtochukwu for years and he is extremely talented with delivering
+                        aesthetic user friendly design and also code them him self. &quot;
+                    </p>
+                </div>
+            </div>
+
+            <div class="myclients lmyc">
+                <div class="clients">
+                    <img src="./assets/images/legendary.jpeg" alt="Error Loading Image" width="150px" height="150px"
+                        class="imgborderradius">
+                </div>
+                <div class="clientword">
+                    <div class="chandstars">
+                        <div class="clientheaders">
+                            <h4 class="name">Izunnaya Legend</h4>
+                            <h4 class="cpo">
+                                <a href="https://www.itonexglobal.com" class="cp" target="blank"> Itonex global ltd
+                                    (C.E.O)</a>
+                            </h4>
+                        </div>
+                        <div class="fivestars">
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                            <span class="fa-solid fa-star"></span>
+                        </div>
+                    </div>
+                    <p>
+                        &quot;
+                        Great guy. Great personality. I have worked with him on multiple projects and he always deliver.
+                        Am pretty confident he knows what he does.
+                        &quot;
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+                <!-- THE ANIMATED BORDER  -->
+
+                <a href="#4wrap" class="theborder animeborder">
+                    <div class="animatedborder">
+                        <span class="animatedspan"></span>
+                    </div>
+                </a>
+
+    </section>
+     <!--/ THE FOURTH WRAPPER -->
+
+         <!-- THIS IS THE SECOND WAVE HERE IT BEGINS -->
+    <div class="thesvgparent">
+        <div class="custom-shape-divider-bottom-1651923262">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
+    <!-- /THIS IS THE SECOND WAVE HERE IT ENDS -->
 </body>
 
 </html>
